Final-MVC-Project

--- a/Demo.PL/Views/Department/Index.cshtml
+++ b/Demo.PL/Views/Department/Index.cshtml
@@ -28,7 +28,7 @@
                     <td>@D.Code</td>
                     <td>@D.Name</td>
                     <td>@D.DateOfCreation</td>
-                    <partial name="_ButtonsPV" model="@D.ID" />
+                    <partial name="_ButtonsPV" model="@D.ID.ToString()" />
                 </tr>
                 }
             
