--- a/Demo.PL/Views/Employee/Edit.cshtml
+++ b/Demo.PL/Views/Employee/Edit.cshtml
@@ -1,16 +1,19 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 @{
     ViewData["Title"] = "Edit";
 }
 
 <h1> Edit Employee @Model.Name</h1>
 
-<form asp-action="Edit">
+<form asp-action="Edit" enctype="multipart/form-data">
   
     <partial name="EmployeePartialViews/_CreateEditPV" />
     <input type="submit" value="Edit" class="btn btn-primary" />
     <a asp-action="Index" class="btn btn-light">Back To List</a>
 </form>
-
+@section JQValisation {
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+}
 
 
