--- a/Demo.PL/Views/Employee/EmployeePartialViews/_DeleteDetailsPV.cshtml
+++ b/Demo.PL/Views/Employee/EmployeePartialViews/_DeleteDetailsPV.cshtml
@@ -1,5 +1,13 @@
-﻿@model Employee
+﻿@model EmployeeViewModel
 
+@if (Model.EmployeeImage is not null)
+{
+<div class="form-group">
+    <img src="~/Files/Images/@Model.EmployeeImage" class="rounded" hight="100" width="100"/>
+    <input asp-for="EmployeeImage" hidden />
+
+</div>
+}
 <div class="form-group">
     <label class="col-form-label" asp-for="Name"></label>
     <input readonly class="form-control" asp-for="Name" />
